<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/actionBar"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageButton
            android:visibility="invisible"
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:contentDescription="@string/todo"
            android:focusable="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/dashboard"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/back_btn"
            app:layout_constraintBottom_toBottomOf="@id/back_btn"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/introduction_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        >
        <TextView
            android:id="@+id/greetings_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greetings"
            android:fontFamily="@font/prompt"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/name_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_user_name"
            android:fontFamily="@font/prompt"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/greetings_tv"/>

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/user_profile_img"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/todo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewLine"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/introduction_container"
        app:layout_constraintEnd_toEndOf="@id/introduction_container"
        app:layout_constraintTop_toBottomOf="@id/introduction_container"
        android:background="@color/skyBlue"
        />

    <TextView
        android:id="@+id/map_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_location"
        app:layout_constraintStart_toStartOf="@id/viewLine"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        android:textColor="@color/black"
        android:textSize="16sp"
        />
    <ImageView
        android:id="@+id/map_view"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="@id/viewLine"
        app:layout_constraintEnd_toEndOf="@id/viewLine"
        android:layout_marginTop="8dp"
        android:src="@drawable/map_dummy_mapbox"
        app:layout_constraintTop_toBottomOf="@id/map_title"
        android:contentDescription="@string/todo"
        tools:targetApi="s" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/health_container"
        android:layout_marginTop="24dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/viewLine"
        app:layout_constraintEnd_toEndOf="@id/viewLine"
        app:layout_constraintTop_toBottomOf="@id/map_view"
        >
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/health_card"
            android:layout_width="match_parent"
            android:layout_marginEnd="24dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            android:backgroundTint="#F2F2F2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                >
                <ImageView
                    android:id="@+id/health_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_ministry_of_health_figma"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/health_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/find_the_nearest_hospitals"
                    android:fontFamily="@font/prompt"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/health_card"
            android:layout_marginStart="-24dp"
            android:src="@drawable/ic_next_figma"
            android:elevation="1dp"
            app:layout_constraintTop_toTopOf="@id/health_card"
            app:layout_constraintBottom_toBottomOf="@id/health_card"
            android:contentDescription="@string/todo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/police_container"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/viewLine"
        app:layout_constraintEnd_toEndOf="@id/viewLine"
        app:layout_constraintTop_toBottomOf="@id/health_container"
        >
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/police_card"
            android:layout_width="match_parent"
            android:layout_marginEnd="24dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            android:backgroundTint="#F2F2F2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                >
                <ImageView
                    android:id="@+id/police_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_police_car_light_figma"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/police_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/find_the_nearest_police_station"
                    android:fontFamily="@font/prompt"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/police_card"
            android:layout_marginStart="-24dp"
            android:src="@drawable/ic_next_figma"
            android:elevation="1dp"
            app:layout_constraintTop_toTopOf="@id/police_card"
            app:layout_constraintBottom_toBottomOf="@id/police_card"
            android:contentDescription="@string/todo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nearby_container"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/viewLine"
        app:layout_constraintEnd_toEndOf="@id/viewLine"
        app:layout_constraintTop_toBottomOf="@id/police_container"
        >
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/nearby_card"
            android:layout_width="match_parent"
            android:layout_marginEnd="24dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            android:backgroundTint="#F2F2F2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                >
                <ImageView
                    android:id="@+id/nearby_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clarity_user_solid_badged_figma"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/nearby_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/find_nearby_users"
                    android:fontFamily="@font/prompt"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/nearby_card"
            android:layout_marginStart="-24dp"
            android:src="@drawable/ic_next_figma"
            android:elevation="1dp"
            app:layout_constraintTop_toTopOf="@id/nearby_card"
            app:layout_constraintBottom_toBottomOf="@id/nearby_card"
            android:contentDescription="@string/todo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/help_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/seek_help"
        app:layout_constraintStart_toStartOf="@id/nearby_container"
        app:layout_constraintEnd_toEndOf="@id/nearby_container"
        app:layout_constraintTop_toBottomOf="@id/nearby_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="12dp"
        android:layout_marginBottom="4dp"
        android:elevation="4dp"
        android:textSize="16sp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:padding="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>